# PulseNet-RUL-Forecasting

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pyre_configuration  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVIDENCE_POLICY.md  FAILURE_MODES.md  Hyperparameter_Tuning.py  IR_PLAYBOOK.md  LICENSE  LIMITATIONS.md  Makefile  NOVELTY.md  OVERHAUL.md  PORTFOLIO.md  README.md  ROADMAP.md  SAFE_FALLBACK_BEHAVIOR.md  SECURITY.md  STRIDE_THREAT_MODEL.md  THREAT_MODEL.md  VERIFICATION_EVIDENCE.md  access_audit.jsonl  after_hyper_tuningvs_before.py  blockchain_logger.py  config.example.yaml  config.yaml  convert_models.py  dashboard.py  demo.py  docker-compose.yml  genesis_output.txt  ledger.json  ledger_public.json  main.py  (+17 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  demo-smoke.yml
attack_mapping/: enricher.py
dags/: pulsenet_retraining.py
deploy/: prometheus.yml
deploy/grafana/provisioning/dashboards/: pulsenet-overview.json  pulsenet.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
deploy/helm/pulsenet/: Chart.yaml
deploy/helm/pulsenet/templates/: deployment.yaml  namespace.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  model-artifacts-pvc.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/monitoring/: grafana-dashboard.json  prometheus-rules.yml
deploy/terraform/: README.md  main.tf  outputs.tf  variables.tf
docs/: ARCHITECTURE.md  DATA_LINEAGE.md  ML_SECURITY_AUDIT_2026.md  SECURITY_AUDIT.md  THREAT_MODEL.md  design_doc.md  nist_ai_rmf_controls.yaml  security-showcase.html
docs/evidence/: validation_results.json
models/: feature_registry.skops  scaler.skops
outputs/benchmarks_v2/: benchmark_results.json
reports/: benchmark_report.md
scripts/: download_data.py  generate_api_artifacts.py  generate_test_fixture.py  robotics_telemetry_bridge.py  run_benchmark.py  run_rul_benchmark.py  run_validation.py  verify_benchmarks.py
src/pulsenet/: __init__.py  config.py  logger.py
src/pulsenet/api/: __init__.py  _prometheus.py  app.py  auth.py  schemas.py
src/pulsenet/api/middleware/: tenant.py
src/pulsenet/api/routes/: __init__.py  audit.py  health.py  predict.py  train.py
src/pulsenet/benchmarks/: __init__.py  benchmark.py  ddp_benchmark.py
src/pulsenet/core/: Feature.py  Optimal_Threshold.py  evaluate_secure.py  exceptions.py  features_secure.py  optimal_threshold.py  preprocess_secure.py  train_secure.py
src/pulsenet/dashboard/: __init__.py  app.py
src/pulsenet/evaluation/: evaluate_roc.py  metrics.py  rul_regression.py
src/pulsenet/mlops/: __init__.py  tracker.py
src/pulsenet/models/: __init__.py  base.py  ensemble.py  isolation_forest.py  lstm_model.py  registry.py  training.py  transformer_model.py
src/pulsenet/monitoring/: drift_detection.py
src/pulsenet/pipeline/: __init__.py  feature_registry.py  ingestion.py  official_cmapss.py  orchestrator.py  preprocessing.py
src/pulsenet/security/: __init__.py  adversarial_telemetry.py  adversarial_telemetry_guard.py  artifacts.py  audit.py  blockchain.py  encryption.py  model_loading.py  vault_integration.py
src/pulsenet/streaming/: __init__.py  consumer.py  producer.py  queue.py
tests/: conftest.py  smoke_test.py  test_api.py  test_attack_mapping.py  test_auth_secret.py  test_benchmark_suite.py  test_dashboard.py  test_extra_coverage.py  test_mlops_streaming.py  test_models.py  test_more_coverage.py  test_pipeline.py  test_pipeline_extra.py  test_rul_regression.py  test_security.py  test_torch_models.py
tests/adversarial/attacks/: __init__.py  gradient_perturbation.py  sensor_spoofing.py
