[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsenet-rul-forecasting"
version = "1.0.1"
description = "RUL forecasting and security monitoring for industrial ML pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Pooja Kiran"}]
dependencies = [
    "bcrypt>=4.1,<5",
    "cryptography>=42,<46",
    "fastapi>=0.111,<1",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "prometheus-client>=0.20,<1",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "python-jose[cryptography]>=3.3,<4",
    "PyYAML>=6.0,<7",
    "scikit-learn>=1.5,<2",
    "skops>=0.10,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ml = [
    "torch>=2.2,<3",
]
dev = [
    "bandit>=1.7,<2",
    "httpx>=0.27,<1",
    "pip-audit>=2.7,<3",
    "pyright>=1.1,<2",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.coverage.run]
branch = true
source = ["pulsenet"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
