[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PulseNet-RUL-Forecasting"
version = "1.0.0"
description = "RUL forecasting with ICS ATT&CK v19 detection for industrial ML pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "attack-v19-core @ git+https://github.com/poojakira/attack-v19-core.git",
    "mitreattack-python==3.0.3",
    "stix2==3.0.1",
    "pydantic==2.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"